# gstreamer-tutorials

./: .gitignore  Dockerfile  README.md  docker-compose.yml
src/basic/t1-hello-world/: Makefile
src/basic/t12-streaming/: Makefile
src/basic/t13-playback-speed/: Makefile  README.md  basic-tutorial-13.cpp
src/basic/t2-gstreamer-concepts/: Makefile  basic-tutorial-2.c
src/basic/t3-dynamic-pipelines/: Makefile  basic-tutorial-3.c  basic-tutorial-3.cpp  gst-utils.cpp
src/basic/t4-time-mgmt/: Makefile  basic-tutorial-4.cpp
src/basic/t5-gui-toolkit-int/: Makefile  Readme.md  basic-tutorial-5.cpp
src/basic/t6-media-formats-pad-caps/: Makefile  basic-tutorial-6.cpp  gst-utils.h
src/basic/t7-multithread-pad-availability/: Makefile  basic-tutorial-7.cpp
src/basic/t8-shortcut-pipeline/: Makefile  basic-tutorial-8.cpp
src/basic/t9-media-info-gathering/: Makefile  basic-tutorial-9.cpp
src/playback/t1-playbin-usage/: CMakeLists.txt  README.md  playback-tutorial-1.cpp
src/playback/t2-subtitle-mgmt/: CMakeLists.txt  playback-tutorial-2.cpp
src/playback/t3-shorcut-pipeline/: CMakeLists.txt  playback-tutorial-3.cpp
src/playback/t4-progressive-streaming/: CMakeLists.txt  playback-tutorial-4.cpp
src/playback/t5-color-balance/: CMakeLists.txt  playback-tutorial-5.cpp
src/playback/t6-audio-visualization/: CMakeLists.txt  playback-tutorial-6.cpp
src/playback/t7-custom-playbin-sinks/: CMakeLists.txt  playback-tutorial-7.cpp
